--- a/README
+++ b/README
@@ -1,6 +1,6 @@
                               Perfitys plugin
 
-The author has started writing the Perfitys plugin to fulfill his personal
+The author has started writing the Perfitys Vim plugin to fulfill his personal
 needs as a Vim user without cluttering his vimrc file with autocommands and
 other settings. The plugin applies per file type settings and offers some
 automatic typing fonctionalities.
@@ -77,9 +77,8 @@ text
 vim
 
 ==============================================================================
-3. Disabling the plugin                                 *perfitys-disabling$
+3. Disabling the plugin
 
-                                        *loaded_perfitys*
 You can completely disable the Perfitys plugin without uninstalling it by
 adding this line to your vimrc file:
 
