--- a/README
+++ b/README
@@ -71,6 +71,7 @@ Currently, the following file types are supported:
 
 ada
 c
+gitcommit
 help
 sh
 text
@@ -115,8 +116,9 @@ The 'textwidth' option is set by Perfitys depending on the file type. The
 default settings are as follows:
 
 | File type       | 'textwidth' option value |
-|---------------- + -------------------------|
+|-----------------+--------------------------|
 | ada, c, sh, vim | 79                       |
+| gitcommit       | 72                       |
 | help, text      | 78                       |
 
 The default settings can be overwritten by setting global variables in your
@@ -158,11 +160,12 @@ following line to your vimrc file:
 The 'tabstop', 'shiftwidth' and 'softtabstop' are set by Perfitys depending on
 the file type. The default settings are as follows:
 
-| File type  | 'tabstop', 'shiftwidth' and 'softtabstop' options value |
-|----------- + --------------------------------------------------------|
-| ada        | 3                                                       |
-| c, sh, vim | 4                                                       |
-| help, text | 8                                                       |
+| File type    | 'tabstop', 'shiftwidth' and 'softtabstop' options value |
+|--------------+---------------------------------------------------------|
+| ada          | 3                                                       |
+| c, gitcommit | 4                                                       |
+| sh, vim      | 4                                                       |
+| help, text   | 8                                                       |
 
 The default settings can be overwritten by setting global variables to your
 vimrc file. For example, if you want a tab width of 8 for the sh file type,
