--- a/README
+++ b/README
@@ -27,7 +27,8 @@ supported. But support for other file types can easily be added.
         4.5. Bullet-lists
         4.6. Folding method
 5. IDE features
-        5.1. Running the current file
+        5.1. Population of the quickfix window
+        5.2. Running the current file
 6. Automatic typing
         6.1. Primary separator
         6.2. Secondary separator
@@ -344,7 +345,40 @@ following line to your vimrc file:
 ==============================================================================
 5. IDE features
 
-5.1 Running the current file
+5.1. Population of the quickfix window
+
+
+Perfitys provides a function to populate the quickfix-window. This function
+can be operated using the :VimgrepInQF command, or using the Plugin | Perfitys
+menu. It runs a vimgrep command and opens the quickfix-window if the
+vimgrep command has yielded results.
+
+A key mapping is also defined: <Leader>QF
+
+You can change this mapping (say to <Leader>ZZ) by adding the following line
+to your vimrc file:
+
+        map <Leader>ZZ <Plug>PerfitysVimgrepInQF
+
+The function is applicable if a buffer local variable exists with the name
+b:perfitys_vimgrepinqf_params and this variable is a dictionary with the
+following keys:
+- reg_exp: The regular expression to be used in the vimgrep command;
+- file: a string to be used as the file argument in the vimgrep command;
+- min_cwd_depth: a directory depth threshold (if the depth of the current
+  directory is below this threshold, then the function will abort);
+- relative_to_home: if nonzero, then the directory depth will be evaluated
+  relative to the user's home directory and the function will abort if the
+  current directory is not below the user's home directory.
+
+By default, Perfitys defines such a dictionary for a few file types:
+
+| File type | reg_exp                       | file     |
+|-----------+-------------------------------+----------|
+| vim       | ^\s*fu\(nction\)\?!\?\s*\S\+( | **/*.vim |
+
+----------------------------------------------
+5.2 Running the current file
 
 
 Perfitys provides a function to run the currently edited file with user
