Complete documentation about :VimgrepInQF

--- a/README
+++ b/README
@@ -377,6 +377,8 @@ By default, Perfitys defines such a dictionary for a few file types:
 |-----------+-------------------------------+----------|
 | vim       | ^\s*fu\(nction\)\?!\?\s*\S\+( | **/*.vim |
 
+min_cwd_depth is set to 2 and relative_to_home to 1.
+
 ----------------------------------------------
 5.2 Running the current file
 
