Add the quickfix height modification functions

--- a/README
+++ b/README
@@ -379,6 +379,23 @@ By default, Perfitys defines such a dictionary for a few file types:
 
 min_cwd_depth is set to 2 and relative_to_home to 1.
 
+Some functions are provided to change the height of the quickfix window. They
+can be operated using the :MakeQFTaller and :MakeQFSmaller commands or using
+the Plugin | Perfitys menu.
+
+Key mappings are also defined: <Leader>+ and <Leader>-
+
+To change the mappings add lines like the following in your |vimrc| file:
+
+        map <Leader>ZZ <Plug>PerfitysMakeQFTaller
+
+
+By default, the height of the quickfix window changes by steps of three lines.
+You can force the step to a different value (say 6) by adding the following
+line in your |vimrc| file:
+        let g:perfitys_qfheightstep = 6
+
+
 ----------------------------------------------
 5.2 Running the current file
 
