Ease the use of "make" for Ada file type

--- a/README
+++ b/README
@@ -30,6 +30,7 @@ supported. But support for other file types can easily be added.
         5.1. Population of the quickfix window
         5.2. Running the current file
         5.3. Compiling the current Ada file
+        5.4. Issuing a "make" command
 6. Automatic typing
         6.1. Primary separator
         6.2. Secondary separator
@@ -408,7 +409,7 @@ line in your |vimrc| file:
 
 
 ----------------------------------------------
-5.2 Running the current file
+5.2. Running the current file
 
 
 Perfitys provides a function to run the currently edited file with user
@@ -464,7 +465,7 @@ sh
 
 
 ----------------------------------------------
-5.3 Compiling the current Ada file
+5.3. Compiling the current Ada file
 
 
 Perfitys provides functions to apply various gprbuild commands the current
@@ -500,6 +501,18 @@ A key mapping is also defined: F12
 The gprbuild command is "gprbuild -p " followed by the name of the current
 file.
 
+
+----------------------------------------------
+5.4. Issuing a "make" command
+
+Perfitys provides a function to issue a make command. It is currently
+applicable to the "ada" file type and is exclusive of the function to run the
+currently edited file because it is actually the same function (:RunWithArgs).
+The same key mappings are defined (F8 and F9).
+
+Note that the function may be used to issue any command. When prompted for
+arguments to the make command, just erase "make" and type the command you want
+to issue.
 
 ==============================================================================
 6. Automatic typing
