--- a/README
+++ b/README
@@ -93,6 +93,8 @@ make
 matlab
 octave
 php
+python
+rst
 sh
 texinfo
 text
@@ -142,7 +144,8 @@ default settings are as follows:
 | ada, c, conf, css, dosbatch, haskell, html    | 79                       |
 | gitcommit                                     | 72                       |
 | help, text                                    | 78                       |
-| make, matlab, octave, php, sh, vim, xdefaults | 79                       |
+| make, matlab, octave, php, python, rst, sh,   | 79                       |
+| vim, xdefaults                                | 79                       |
 | texinfo                                       | 76                       |
 
 The default settings can be overwritten by setting global variables in your
@@ -192,10 +195,12 @@ the file type. The default settings are as follows:
 | c, conf, css   | 4                                                       |
 | dosbatch       | 4                                                       |
 | gitcommit      | 4                                                       |
-| haskell, html  | 4                                                       |
+| haskell        | 4                                                       |
+| html, rst      | 2                                                       |
 | make           | 4                                                       |
 | matlab, octave | 4                                                       |
-| php, sh, vim   | 4                                                       |
+| php, python    | 4                                                       |
+| sh, vim        | 4                                                       |
 | help, text     | 8                                                       |
 | texinfo        | 4                                                       |
 | xdefaults      | 4                                                       |
